# deep-learning

./: .gitignore  Dockerfile  README.md  environment.yml  pyproject.toml
data/: edu_fineweb.py
docs/: README.template.hbs
examples/convolutional/: cifar10_classification.py
src/utils/: other.py  rng.py
test/: test_checkpoints.py
