[project]
name = "deep-learning"
version = "1.0.0"
description = "Deep learning library"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "datasets>=4.4.1",
    "einops>=0.8.1",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pytest>=9.0.2",
    "regex>=2025.11.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "tensorboard>=2.20.0",
    "tiktoken>=0.12.0",
    "torch==2.5.1",
    "torch-geometric>=2.7.0",
    "torcheval>=0.0.7",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pybars3>=0.9.7",
    "pytest>=9.0.2",
]


# Handle PyTorch with CUDA
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch       = [{ index = "pytorch-cu121", marker = "sys_platform == 'win32' or sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cu121", marker = "sys_platform == 'win32' or sys_platform == 'linux'" }]


# Build configuration (resolve namespace packages for -m execution)
[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
namespace = true
